--- a/NetCoreConsoleTest/NetCoreConsoleTest/NetCoreConsoleTest.csproj
+++ b/NetCoreConsoleTest/NetCoreConsoleTest/NetCoreConsoleTest.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
   </ItemGroup>
