添加缓存的信息，内存缓存，分布式缓存，分布式下的redis缓存sqlserver 缓存，

--- a/MyNetCore31Web/MyNetCore31Web.csproj
+++ b/MyNetCore31Web/MyNetCore31Web.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>76b13b8c-9ee5-4485-b4cd-e21f3b96e974</UserSecretsId>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
